--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,6 +14,10 @@
 
 }
 
+.bg-color-work-history{
+    background-color:#9b59b6;
+}
+
 .ui-menu-color-home{
     background-color:#e67e22;   
 }
@@ -56,7 +60,7 @@ h1,h2,h3,h4 {marign:0;}
     padding:0 30px 30px;
     float:none;
 }
-
+.history-heading,
 .section-heading{
     font-family:"Exo", sans-serif;
     font-weight:300;
@@ -267,4 +271,55 @@ transition: all 0.35s ease-in-out;
     padding:3px 30px 2px 10px;
     color:#fafafa;
     background-color:rgba(25,25,25,0.2);
+}
+
+.progress-section{
+    margin:40px 20px;
+}
+
+/*--------------------------Work History*/
+.history-heading{
+    color:#fafafa;
+    margin-bottom:50px;
+}
+
+.timeline-item{
+    padding:4em 2em 0em 2em;
+    position:relative;
+    color:#fafafa;
+    border-left:1px solid;
+}
+
+.timeline-item p{
+    padding:0;
+    margin:0;
+}
+
+.timeline-item:before{
+   content:attr(data-dates);
+   position:absolute;
+   left:25em;
+   top:3em;
+   display:block;
+   font-family:"exo", sans serif;
+   font-weight:500;
+   font-size:0.8em;
+   padding:0;
+   margin:0;
+}
+
+.timeline-item:after{
+    width:12px;
+    height:12px;
+    display:block;
+    top:2.4em;
+    position:absolute;
+    left:-6px;
+    border-radius:12px;
+    content: '';
+    background:#fafafa;
+}
+
+.history-items{
+    margin:30px;
 }
