--- a/assets/css/github-styles.css
+++ b/assets/css/github-styles.css
@@ -1,10 +1,9 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto');
+@import url('https://fonts.googleapis.com/css?family=Roboto:100,200,300,400,500,600,700|Exo:100,200,300,400,500,600,700');
 
 br {
   display: block;
   line-height: 1.6em;
 }
-
 
 
 ol,
